--- a/app/components/vto/vto.css
+++ b/app/components/vto/vto.css
@@ -4,7 +4,7 @@
 
 .loading {
   position: absolute;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   z-index: 999;
   background: #000;
@@ -40,6 +40,20 @@
   transition: 0.2s;
 }
 
+.vto-container {
+  position: relative;
+}
+
+.setting-container {
+  background-color: rgba(0,0,0,.5);
+  width: 100%;
+  padding: 8px 32px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 11;
+}
+
 .canvas-wrapper {
   position: relative;
   grid-template-columns: 1fr;
@@ -66,13 +80,16 @@
   width: 100%;
   top: 20%;
   font-size: 1.2em;
+  text-align: center;
 }
 .detection-button-container {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: 10;
-  top: 45%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .detection-button {
   cursor: pointer;
@@ -116,7 +133,6 @@
   display: inline;
   background-color: rgb(37, 37, 37);
   transform: rotateY(180deg);
-  object-fit: cover;
 }
 
 .smoothing-canvas {
@@ -177,17 +193,22 @@
   opacity: 0;
   background-color: rgba(0,0,0,.7);
 }
+.instruction-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .instruction.show {
   opacity: 1;
 }
-
 .instruction-text {
   font-size: 1.2em;
-  padding: 4em 2em 1em;
+  padding: 2em 2em 1em;
   margin: 0;
+  text-align: center;
 }
 .instruction-image {
-  height: 400px;
+  height: 300px;
   transition: 0.2s;
 }
 @media (max-width: 986px) {
