--- a/app/components/vto/vto.css
+++ b/app/components/vto/vto.css
@@ -79,13 +79,15 @@
   position: absolute;
   width: 100%;
   top: 20%;
+  color: #FFF;
   font-size: 1.2em;
   text-align: center;
 }
 .detection-button-container {
   position: absolute;
+  display: flex;
   width: 100%;
-  height: 100%;
+  justify-content: center;
   z-index: 10;
   display: flex;
   justify-content: center;
@@ -95,7 +97,7 @@
   cursor: pointer;
   background-color: #FFF;
   color: #101010;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   min-height: 30px;
   padding: 0 1em;
   box-shadow: none;
@@ -139,6 +141,7 @@
   display: inline;
   position: absolute;
   transform: rotateY(180deg) rotateX(180deg);
+  border-radius: 10px;
 }
 
 .canvas-container canvas {
@@ -184,6 +187,7 @@
 
 .instruction {
   position: absolute;
+  display: flex;
   top: 0;
   left: 0;
   width: 100%;
