--- a/app/components/vto/vto.css
+++ b/app/components/vto/vto.css
@@ -52,6 +52,8 @@
   left: 0;
   bottom: 0;
   z-index: 11;
+  border-radius: 0 0 1em 1em;
+  backdrop-filter: blur(5px);
 }
 
 .canvas-wrapper {
@@ -67,6 +69,7 @@
   display: flex;
   align-items: center;
   overflow: hidden;
+  border-radius: 1em;
 }
 
 .overlay {
@@ -74,6 +77,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,.6);
+  backdrop-filter: blur(5px);
 }
 .init-instruction {
   position: absolute;
@@ -196,6 +200,7 @@
   transition: 0.2s;
   opacity: 0;
   background-color: rgba(0,0,0,.7);
+  backdrop-filter: blur(5px);
 }
 .instruction-item {
   display: flex;
@@ -210,6 +215,7 @@
   padding: 2em 2em 1em;
   margin: 0;
   text-align: center;
+  color: #FFF;
 }
 .instruction-image {
   height: 300px;
