--- a/app/components/vto/vto.css
+++ b/app/components/vto/vto.css
@@ -53,7 +53,7 @@
   bottom: 0;
   z-index: 11;
   border-radius: 0 0 1em 1em;
-  backdrop-filter: blur(5px);
+  /* backdrop-filter: blur(5px); */
 }
 
 .canvas-wrapper {
@@ -183,7 +183,7 @@
 .image-selector .finger-switch-button {
   cursor: pointer;
   border: none;
-  border-radius: 10px;
+  border-radius: 0.75rem;
   font-size: 1.2em;
   background-color: #ffffff;
   color: #000000;
