--- a/app/components/vto/vto.css
+++ b/app/components/vto/vto.css
@@ -78,9 +78,10 @@
 .init-instruction {
   position: absolute;
   width: 100%;
-  top: 20%;
+  top: 10%;
   font-size: 1.2em;
   text-align: center;
+  padding: 0 12px;
 }
 .detection-button-container {
   position: absolute;
@@ -93,16 +94,15 @@
 }
 .detection-button {
   cursor: pointer;
-  background-color: #FFF;
-  color: #101010;
-  border-radius: 4px;
+  background-color: #CFFF5E;
+  color: #1B1F3A;
+  border-radius: 40px;
   min-height: 30px;
-  padding: 0 1em;
   box-shadow: none;
   border: none;
   z-index: 10;
   font-size: 1.1em;
-  padding: 16px 32px;
+  padding: 12px 40px;
 }
 
 .watermark {
@@ -132,13 +132,16 @@
 .video-container video {
   display: inline;
   background-color: rgb(37, 37, 37);
+  transform-origin: center center;
   transform: rotateY(180deg);
+  transition: all 1s ease;
 }
 
 .smoothing-canvas {
   display: inline;
   position: absolute;
-  transform: rotateY(180deg) rotateX(180deg);
+  transform: rotateY(180deg);
+  transition: all 1s ease;
 }
 
 .canvas-container canvas {
@@ -202,7 +205,7 @@
   opacity: 1;
 }
 .instruction-text {
-  font-size: 1.2em;
+  font-size: 1.1em;
   padding: 2em 2em 1em;
   margin: 0;
   text-align: center;
@@ -210,6 +213,7 @@
 .instruction-image {
   height: 300px;
   transition: 0.2s;
+  padding: 50px 0;
 }
 @media (max-width: 986px) {
   .instruction-image {
@@ -229,7 +233,7 @@
 }
 
 .bubble {
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0, 0, 0, 0.7);
   width: 32px;
   height: 32px;
   border-radius: 50%;
@@ -237,4 +241,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
