--- a/app/components/vto/vto.css
+++ b/app/components/vto/vto.css
@@ -45,13 +45,44 @@
 }
 
 .setting-container {
-  background-color: rgba(0,0,0,.5);
   width: 100%;
-  padding: 8px 32px;
   position: absolute;
   left: 0;
   bottom: 0;
   z-index: 11;
+}
+.setting-control-btn {
+  background-color: rgba(128, 132, 150, 0.45);
+  width: 32px;
+  height: 32px;
+  padding: 0;
+  border-radius: 20px;
+  font-size: 0.8rem;
+}
+.sliders-tab {
+  width: 100%;
+  height: 136px;
+  background-color: rgba(27, 31, 58, 0.6);
+  backdrop-filter: blur(5px);
+  padding: 14px 46px 32px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+.slider-tab-btn {
+  cursor: pointer;
+  background-color: rgba(27, 31, 58, 0.6);
+  color: #FFFFFF;
+  font-size: 0.8rem;
+  padding: 4px 16px;
+  border-radius: 20px;
+}
+.slider-tab-btn.active {
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #1B1F3A;
+}
+.slider-tab-btn:hover {
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #1B1F3A;
 }
 
 .canvas-wrapper {
@@ -158,6 +189,7 @@
 
 .three-canvas-container canvas {
   display: none;
+  transition: all 1s ease;
 }
 
 .button-container {
@@ -229,7 +261,7 @@
   gap: 20px;
   position: absolute;
   right: 20px;
-  height: 200px;
+  height: 300px;
   top: calc(50% - 100px);
   z-index: 11;
 }
