--- a/app/components/vto/vto.css
+++ b/app/components/vto/vto.css
@@ -58,6 +58,9 @@
   padding: 0;
   border-radius: 20px;
   font-size: 0.8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .sliders-tab {
   width: 100%;
@@ -75,6 +78,10 @@
   font-size: 0.8rem;
   padding: 4px 16px;
   border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
 }
 .slider-tab-btn.active {
   background-color: rgba(255, 255, 255, 0.6);
@@ -147,6 +154,8 @@
   transform: translate(50%, 50%);
   font-size: 0.8em;
   z-index: 10;
+  color: #1B1F3A;
+  font-weight: 700;
 }
 
 .watermark a {
@@ -158,7 +167,7 @@
 
 .watermark img {
   height: 24px;
-  margin-left: 12px;
+  margin-left: 6px;
 }
 
 .video-container video {
@@ -231,6 +240,8 @@
   background-color: rgba(0,0,0,.7);
 }
 .instruction-item {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -267,7 +278,7 @@
 }
 
 .bubble {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(128, 132, 150, 0.45);
   width: 32px;
   height: 32px;
   border-radius: 50%;
